# PlotGUI

./: .gitignore  CMakeLists.txt  MinGWConfigBuild.bat  README.md  Run_MSVC.bat  Run_MinGW.bat  VS2022ConfigBuild.bat  imgui.ini
Math/: CMath.cpp  CMath.h
Math/func/: Algorithm.h  Algorithm.inl  Func.h  Func.inl  Transform.h  Transform.inl
Math/type/: Base.h  Complex.h  Complex.inl  Mat.h  Mat.inl  Quat.h  Quat.inl  Vec.h  Vec.inl
PlotGUI/Component/: Console.cpp  Console.h  Inspector.cpp  Inspector.h  Panel.cpp  Panel.h  Plot.cpp  Plot.h  Profiler.cpp  Profiler.h  Script.h  Serialization.h
PlotGUI/Core/: Application.cpp  Application.h  GuiWindow.h  Main.cpp  ProjectsManager.cpp  ProjectsManager.h  WindowsManager.cpp  WindowsManager.h
PlotGUI/Include/: PlotGUI.h
PlotGUI/Reflection/Include/: ArgWrap.h  ClassMeta.h  FieldMeta.h  FuncMeta.h  Reflect.h  RegisterHelper.h  Registry.h  Singleton.h
PlotGUI/Reflection/Src/: ClassMeta.cpp  RegisterHelper.cpp  Registry.cpp
PlotGUI/Scripts/: H01_1_P04.cpp  H02_1_P04.cpp  H02_2_P05.cpp  H03_1_P03.cpp  H03_2_P05.cpp  H04_1_P09.cpp  H05_1_P02.cpp  H05_2_P06.cpp  H06_1_P03.cpp  H06_2_P07.cpp  H07_1_P01.cpp  H07_2_P02.cpp  H08_1_P01.cpp  H09_1_P05.cpp  H10_1_P05.cpp  H11_1_P01.cpp  SecondScript.cpp  StartScript.cpp
PlotGUI/Thread/: FunctionWrapper.h  Joiner.h  ThreadPool.h  ThreadQueue.h  Threads.h
PlotGUI/Utils/: CoreUtils.h  Exception.cpp  Exception.h  Singleton.h  Utils.h
PlotGUI/Win32/: D3DWindow.cpp  D3DWindow.h
Resources/H06_1_P03/: Coefficients.json
ThirdPartys/Imgui/misc/fonts/: IconsFontAwesome6.h  IconsFontAwesome6Brands.h
